--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   beautiful_soup_dart: ^0.3.0
   dio: ^5.8.0+1
   html: ^0.15.5
+  http: ^1.3.0
   # path: ^1.8.0
 
 dev_dependencies:
